<resources>
    <string name="app_name">Trabalho_Lancamentos</string>
    <string name="error_api">Ocorreu um erro no processamento</string>
    <string name="novo_lancamento_salvo_sucesso">Lançamento registrado</string>
    <string name="novo_lancamento_title_1">Novo</string>
    <string name="novo_lancamento_title_2">Lançamento</string>
    <string name="novo_lancamento_tipo_saida">Saída</string>
    <string name="novo_lancamento_tipo_entrada">Entrada</string>
    <string name="novo_lancamento_categoria">Categria</string>
    <string name="novo_lancamento_descricao">Descrição</string>
    <string name="novo_lancamento_mes">Mês</string>
    <string name="novo_lancamento_ano">Ano</string>
    <string name="novo_lancamento_enviar">Salvar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_lancamento_title_1">Dashboard</string>
    <string name="dashboard_lancamento_saida">Saídas</string>
    <string name="dashboard_lancamento_entradas">Entradas</string>
    <string name="dashboard_lancamento_saldo">Saldo</string>
    <string name="real_prefix_simbolo">R$</string>
    <string name="hintLogin">Usuário</string>
    <string name="hintSenha">Senha</string>
    <string name="hintNome">Nome</string>
    <string name="hintEmail">Email</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="telaLogin">Voltar para o Login</string>
    <string name="cadastro">Realizar cadastro</string>
    <string name="esqueceuSenha">Esqueceu Senha</string>
    <string name="novaSenha">Nova senha</string>
    <string name="novaSenhaConfirmar">Confirmar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="novo_lancamento_categoria_error">Categoria precisa ser informada</string>
    <string name="novo_lancamento_descricao_error">Descrição precisa ser informada</string>
    <string name="novo_lancamento_ano_error">Ano informado está inválido</string>
    <string name="novo_lancamento_mes_error">Mês informado está inválido</string>
    <string name="novo_lancamento_valor_error">Valor informado está inválido</string>
    <string name="usuario_senha_invalidos">Usuário ou senha inválidos</string>
    <string name="listagem_title_2">Realizados</string>
    <string name="listagem_title_1">Lançamentos</string>
    <string name="listagem_filtro_mes_hint">Mês</string>
    <string name="listagem_filtro_ano_hint">Ano</string>
    <string name="listagem_tela_dashboard">Dash</string>
    <string name="listagem_tela_novo">Novo</string>
    <string name="listagem_item_data">Data:</string>
    <string name="listagem_item_valor">Valor: R$</string>
    <string name="listagem_item_tipo_lancamento_entrada">ENTRADA</string>
    <string name="listagem_item_tipo_lancamento_saida">SAÍDA</string>
    <string name="listagem_item_categoria">Categooria:</string>
    <string name="listagem_item_descricao">Descricao:</string>
</resources>