<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activies.CadastroMainActivity">

    <LinearLayout
        android:id="@+id/Cadastro_header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="-30dp"
            app:cardBackgroundColor="@color/primary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="15dp"
        app:cardElevation="20dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:id="@+id/blocoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:hint="@string/hintNome" />

            <EditText
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/UserName"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:hint="@string/hintEmail" />

            <EditText
                android:id="@+id/UserSenha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/UserEmail"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:hint="@string/hintSenha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Cadastrar"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_below="@id/UserSenha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/primary"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/TelaLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/Cadastrar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/transparent"
                android:text="@string/telaLogin"
                android:textColor="@color/primary"
                android:layout_marginBottom="30dp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>