<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activies.MainActivity">

    <LinearLayout
        android:id="@+id/Login_header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="-30dp"
            app:cardBackgroundColor="@color/primary">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="15dp"
        app:cardElevation="20dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:id="@+id/blocoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UserLogin_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/primary"
                    android:hint="@string/hintLogin"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UserSenha_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@id/UserLogin_Layout"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/primary"
                    android:hint="@string/hintSenha"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Entrar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/UserSenha_Layout"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primary"
                android:text="@string/entrar"
                android:textColor="@color/white"
              />

            <Button
                android:id="@+id/Cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Entrar"
                android:text="@string/cadastro"
                android:textColor="@color/primary"
                android:background="@color/transparent"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/EsqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cadastro"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:background="@color/transparent"
                android:text="@string/esqueceuSenha"
                android:textColor="@color/red" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>