<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activies.CadastroMainActivity">

    <LinearLayout
        android:id="@+id/EsqueceuSenha_header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="-30dp"
            app:cardBackgroundColor="@color/primary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esqueceuSenha"
                android:gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="15dp"
        app:cardElevation="20dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:id="@+id/blocoEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UserName_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:background="@color/white"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/primary" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/Confirmar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/UserName_Layout"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                android:text="@string/novaSenhaConfirmar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/TelaLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/Confirmar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@color/transparent"
                android:text="@string/telaLogin"
                android:textColor="@color/primary" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>