<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activies.CadastroMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/EsqueceuSenha_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-30dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/listagem_title_1"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/listagem_title_2"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/Card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:id="@+id/blocoEsqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/totalPesquisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Mes_Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/Mes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/white"
                            android:hint="@string/listagem_filtro_mes_hint"
                            android:inputType="number"
                            android:textColorHint="@color/primary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Ano_Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/Ano"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:background="@color/white"
                            android:hint="@string/listagem_filtro_ano_hint"
                            android:inputType="number"
                            android:textColorHint="@color/primary" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalAcoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalPesquisa"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dashboard"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/totalPesquisa"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:background="@color/primary"
                        android:backgroundTint="@color/primary"
                        android:text="@string/listagem_tela_dashboard" />

                    <Button
                        android:id="@+id/Pesquisar"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/totalPesquisa"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary"
                        android:text="@string/pesquisar"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/novoDado"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/totalPesquisa"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:background="@color/primary"
                        android:backgroundTint="@color/primary"
                        android:text="@string/listagem_tela_novo" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itens_listagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalAcoes"
                    tools:listitem="@layout/item_listagem" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>