<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activies.DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-30dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/dashboard_lancamento_title_1"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_lancamento_saidas_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/dashboard_lancamento_saida"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dashboard_lancamento_saida_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_lancamento_entradas_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboard_lancamento_saidas_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/dashboard_lancamento_entradas"
                    android:textColor="@color/green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dashboard_lancamento_entrada_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_lancamento_total_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboard_lancamento_entradas_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/dashboard_lancamento_total"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dashboard_lancamento_total_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>